# games-infos

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  README.md
.github/workflows/: main.yml
EpicRetriever/: AppInfoModel.cs  CatalogModel.cs  EpicRetriever.csproj  Program.cs
SteamRetriever/: AccountSettingsStore.cs  Ansi.cs  CDNClientPool.cs  ContentDownloader.cs  DateTimeToUnixConverter.cs  DepotConfigStore.cs  DownloadConfig.cs  HttpClientFactory.cs  HttpDiagnosticEventListener.cs  KeyValueNumberParserHelper.cs  NtfyService.cs  PlatformUtilities.cs  Program.cs  ProtoManifest.cs  Steam3Session.cs  SteamRetriever.csproj  SteamUserStats.cs  UGCFileInfo.cs  Utils.cs
SteamRetriever/Models/: AchievementModels.cs  ApplicationMetadata.cs  MetadataDatabase.cs
SteamRetriever/SteamKit2/: SteamKit2.csproj  changes.txt
docs/: index.md
epic/00b9ec358e1f46daa4f8e1194d5081d8/: Heron.json
epic/Eel/: Eel.json
epic_dumper/: CMakeLists.txt  CurlEasy.cpp  CurlEasy.h  EGS_Api.cpp  EGS_Api.h  base64.cpp  base64.h  cxxopts.h  epic_dumper.cpp  function_traits.hpp  library.cpp  library.h  os_funcs.cpp  os_funcs.h  switchstr.hpp
epic_dumper/example/: dumper_params.txt
epic_retriever/: AppInfoModel.cs  CatalogModel.cs  Program.cs  build.sh  epic_retriever.csproj
steam_retriever/: AccountSettingsStore.cs  Ansi.cs  AnsiDetector.cs  CDNClientPool.cs  ContentDownloader.cs  DepotConfigStore.cs  DownloadConfig.cs  HttpClientFactory.cs  HttpDiagnosticEventListener.cs  NativeMethods.txt  PlatformUtilities.cs  Program.cs  ProtoManifest.cs  Steam3Session.cs  SteamUserStats.cs  UGCFileInfo.cs  Utils.cs  build.sh  install_dotnet.sh  steam_retriever.csproj
(+163495 files in other folders)
